# behavior_auth

./: .gitignore  CONTRIBUTING.md  README.md  requirements.txt  run_pipeline.ps1  run_pipeline.sh  start_background.sh
.github/workflows/: ci.yml
event_engine/: CMakeLists.txt
event_engine/include/: EventEngine.hpp  EventPublisher.hpp
event_engine/src/: EventEngine.cpp  EventEngine_Windows.cpp  EventPublisher.cpp  main.cpp
python_engine/: CMakeLists.txt  adaptive_trainer.py  analyze_scores.py  database.py  event_processor.py  feature_engine.py  generate_pseudo_impostor.py  import_impostor_db.py  realtime_engine.py  receiver.py  run_full_pipeline.py  sequence_engine.py  settings.py  test_iforest.py  train_iforest.py  train_sequence_iforest.py
